--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color = primary>
     <ion-title>
       Ionic Blank
     </ion-title>
@@ -11,4 +11,10 @@
     The world is your oyster.
     <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
   </div>
+
+  <div class="ion-padding">
+    Voici ma super application
+  </div>
+
 </ion-content>
+
